Add alt on OsloMet logo

--- a/accessibility.html
+++ b/accessibility.html
@@ -13,7 +13,7 @@
     <!-- The code is placed into divs throughout to style our webpage more easily -->
     <div class="banner-container">
       <div class="oslomet-logo">
-        <img src="./img/oslomet-logo-black.svg">
+        <img src="./img/oslomet-logo-black.svg" alt="OsloMet sin logo">
       </div>
       <!-- This is a button styled to make it into a dropdown menu and placed inside a div -->
       <!-- This dropdown menu links to the other pages on our website -->
