--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <!-- This is the container for the logo at the lefthand side of the webpage -->
         <div class="oslomet-logo">
           <!-- The logo is copied from: https://student.oslomet.no/o/oslomet-theme/images/oslomet-logo-black.svg -->
-          <img src="./img/oslomet-logo-black.svg">
+          <img src="./img/oslomet-logo-black.svg" alt="OsloMet sin logo">
         </div>
         <!-- This is a button styled to make it into a dropdown menu and placed inside a div -->
         <!-- This dropdown menu links to the other pages on our website -->
