--- a/topical.html
+++ b/topical.html
@@ -20,7 +20,7 @@
       <!-- This logo is copied from: https://student.oslomet.no/o/oslomet-theme/images/oslomet-logo-black.svg-->
       <div class="oslomet-logo">
         <!-- Link to the copied logo which is located in our "img" folder -->
-        <img src="./img/oslomet-logo-black.svg" />
+        <img src="./img/oslomet-logo-black.svg" alt="OsloMet sin logo">
       </div>
       <!-- This is the container for the dropdown menu -->
       <!-- We've used the same code for the dropdown menu for on all our pages -->
