--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
         </div>
     </div>
     <!-- This is the container for the heading and sub-heading -->
+    <!-- This container exists so that the whole of the heading and sub heading has a yellow background -->
       <div class="heading-container">
         <div class="main-heading">
           <h1>
