--- a/accessibility.html
+++ b/accessibility.html
@@ -57,7 +57,7 @@
           Vi har delt opp lengre paragrafer i flere, kortere paragrafer, slik at det blir lettere å lese
         </li>
         <li>
-          Det er lagt skygge/endret farge når man fører musepekeren over en chehcbox eller lignende.
+          Det er lagt skygge/endret farge når man fører musepekeren over en checkbox eller lignende.
           Da blir det økt kontrast og det blir lettere å se.
         </li>
         <li>
