--- a/accessibility.html
+++ b/accessibility.html
@@ -86,12 +86,44 @@
     <!-- This is only shown when the checkbox is open -->
     <div class="content">
       <div class="accessibility-test-flex">
-        <img src="" alt="Accessibility test av index.html">
-        <p>
-          Da vi kjørte vår første accessibility test av siden index.html. Fikk vi 85% accessibility, og vi leste 
-          testen og så at OsloMet logoen i banneret manglet en alt tekst. Dette la vi på og accessibility scoren
-          endret seg fra 85% til 97%. 
-        </p>
+        <div class="accessibility-test-bildeslideshow">
+          <a target="_blank" href="">
+            <img class="bilder-til-slideshow" src="" alt="Bilde av accessibility testen hvor vi fikk 85% accessibility score">
+          </a>
+          <div class="beskrivelse-av-bildet">
+            Bilde av accessibility testen vi kjørte først og fikk 85%
+          </div>
+
+          <a target="_blank" href="">
+            <img class="bilder-til-slideshow" src="" alt="OsloMet logoen uten alt tekst">
+          </a>
+          <div class="beskrivelse-av-bildet">
+            OsloMet logoen uten "alt" tekst
+          </div>
+
+          <a target="_blank" href="">
+            <img class="bilder-til-slideshow" src="" alt="OsloMet logoen med alt tekst">
+          </a>
+          <div class="beskrivelse-av-bildet">
+            OsloMet logoen med "alt" tekst
+          </div>
+
+          <a target="_blank" href="">
+            <img class="bilder-til-slideshow" src="" alt="Accessibility testen etter at det ble lagt til alt tekst og vi fikk 97% score">
+          </a>
+          <div class="beskrivelse-av-bildet">
+            Accessibility testen etter at vi har lagt til "alt" tekst på OsloMet logoen og fikk 97% accessibility score.
+          </div>
+        </div>
+  
+        
+        <div class="accessibility-test-tekst" class="accessibility-test-bilde"> 
+          <p>
+           Da vi kjørte vår første accessibility test av siden index.html. Fikk vi 85% accessibility, og vi leste 
+           testen og så at OsloMet logoen i banneret manglet en alt tekst. Dette la vi på og accessibility scoren
+           endret seg fra 85% til 97%. 
+         </p>
+        </div> 
       </div>
     </div>
   </div>
@@ -110,7 +142,7 @@
         <div class="accessibility-test-bilde">
           <img src="" alt="Accessibility-test av topical.html">
         </div>
-        <div class="accessibility-test-tekst">
+        <div class="accessibility-test-tekst" class="accessibility-test-bilde">
           <p>
             Da vi kjørte accessibility test på siden topical.html hadde vi allerede lagt til en "alt" tekst på
             OsloMet logoen og her fikk vi 97%.
@@ -131,11 +163,15 @@
     </label>
     <div class="content">
       <div class="accessibility-test-flex">
-        <img src="" alt="Accessibility-test av campus.html">
-        <p>
-          Da vi kjørte accessibility test på siden campus.html hadde vi allerede lagt til en "alt" tekst på
-          OsloMet logoen og her fikk vi 99%.
-        </p>
+        <div class="accessibility-test-bilde">
+          <img src="" alt="Accessibility-test av campus.html">
+        </div>
+        <div class="accessibility-test-tekst" class="accessibility-test-bilde">
+          <p>
+            Da vi kjørte accessibility test på siden campus.html hadde vi allerede lagt til en "alt" tekst på
+            OsloMet logoen og her fikk vi 99%.
+          </p>
+        </div>
       </div>
     </div>
   </div>
