--- a/accessibility.html
+++ b/accessibility.html
@@ -87,29 +87,29 @@
     <div class="content">
       <div class="accessibility-test-flex">
         <div class="accessibility-test-bildeslideshow">
-          <a target="_blank" href="">
-            <img class="bilder-til-slideshow" src="" alt="Bilde av accessibility testen hvor vi fikk 85% accessibility score">
+          <a target="_blank" href="img/accessibility-test-85.png">
+            <img class="bilder-til-slideshow" src="img/accessibility-test-85.png" alt="Bilde av accessibility testen hvor vi fikk 85% accessibility score">
           </a>
           <div class="beskrivelse-av-bildet">
             Bilde av accessibility testen vi kjørte først og fikk 85%
           </div>
 
-          <a target="_blank" href="">
-            <img class="bilder-til-slideshow" src="" alt="OsloMet logoen uten alt tekst">
+          <a target="_blank" href="img/Code before.jpg">
+            <img class="bilder-til-slideshow" src="img/Code before.jpg" alt="OsloMet logoen uten alt tekst">
           </a>
           <div class="beskrivelse-av-bildet">
             OsloMet logoen uten "alt" tekst
           </div>
 
-          <a target="_blank" href="">
-            <img class="bilder-til-slideshow" src="" alt="OsloMet logoen med alt tekst">
+          <a target="_blank" href="img/Code after.jpg">
+            <img class="bilder-til-slideshow" src="img/Code after.jpg" alt="OsloMet logoen med alt tekst">
           </a>
           <div class="beskrivelse-av-bildet">
             OsloMet logoen med "alt" tekst
           </div>
 
-          <a target="_blank" href="">
-            <img class="bilder-til-slideshow" src="" alt="Accessibility testen etter at det ble lagt til alt tekst og vi fikk 97% score">
+          <a target="_blank" href="img/accessibility_index.jpg">
+            <img class="bilder-til-slideshow" src="img/accessibility_index.jpg" alt="Accessibility testen etter at det ble lagt til alt tekst og vi fikk 97% score">
           </a>
           <div class="beskrivelse-av-bildet">
             Accessibility testen etter at vi har lagt til "alt" tekst på OsloMet logoen og fikk 97% accessibility score.
@@ -140,7 +140,7 @@
     <div class="content">
       <div class="accessibility-test-flex">
         <div class="accessibility-test-bilde">
-          <img src="" alt="Accessibility-test av topical.html">
+          <img src="img/accessibility_topical.jpg" alt="Accessibility-test av topical.html">
         </div>
         <div class="accessibility-test-tekst" class="accessibility-test-bilde">
           <p>
@@ -164,7 +164,7 @@
     <div class="content">
       <div class="accessibility-test-flex">
         <div class="accessibility-test-bilde">
-          <img src="" alt="Accessibility-test av campus.html">
+          <img src="img/accessibility_campus.jpg" alt="Accessibility-test av campus.html">
         </div>
         <div class="accessibility-test-tekst" class="accessibility-test-bilde">
           <p>
