--- a/topical.html
+++ b/topical.html
@@ -53,7 +53,11 @@
           Emneplan
         </p>
       </div>
-    
+      <div class="programming">
+        <div class="Hello-world-image">
+          <img src="./img/helloworld-programming.jpg">
+        </div>
+      </div>
     <!-- This is a container for course description-->
     <div class="grid-6">
       <!-- Each of the grid elements are placed in their own div -->
