add image to site

--- a/topical.html
+++ b/topical.html
@@ -55,7 +55,18 @@
       </div>
       <div class="programming">
         <div class="Hello-world-image">
-          <img src="./img/helloworld-programming.jpg">
+          <!-- This links to the downloaded image in the image folder -->
+          <img src="./img/informasjonsteknologi_bachelor.jpg" alt="Bilde programmering"
+          style="width: 100%;">
+        </div>
+        <!-- Link to the original image -->
+        <div class="original-image-programmering">
+          <a class="original-image"
+          href="https://www.oslomet.no/var/oslomet/storage/images/_aliases/xxxlarge/6/9/0/4/4096-11-nor-NO/informasjonsteknologi_bachelor.jpg"
+          target="_blank">
+          <!-- This is the photographer of the original image -->
+            Foto: Ukjen/hentet fra Oslomet
+          </a>
         </div>
       </div>
     <!-- This is a container for course description-->
@@ -79,6 +90,14 @@
       <div class="grid-item">
         <div class="studyprogram">
           <div class="studieprogram">
+            <h4>
+              <!-- This links to OsloMet study programms and courses -->
+              <a class="heading-grid" 
+              href="https://www.oslomet.no/studier/studieoversikt"
+              target="_blank">
+                Klikk her for å tas til OsloMets studieoversikt: <br>
+              </a>
+            </h4>
             <h4>
               Studieprogram
             </h4>
@@ -123,6 +142,7 @@
     <!-- The different information on the page is categorized and placed in checkboxes/toggle-boxes-->
     <div class="innledning-checkbox">
       <input type="checkbox" id="title-1" />
+      <!-- Each id and for is given a unique name. This is necessary for the checkbox to work as intended -->
       <!-- The label shows the title of the checkbox-->
       <label for="title-1">
         <!-- This heading is shown both when the checkbox is "open" and closed -->
@@ -152,7 +172,12 @@
       </label>
       <div class="content">
         <p>
-          Ingen ut over opptakskrav.
+          Ingen ut over 
+          <a class="opptakskrav" 
+          href="https://www.oslomet.no/studier/soknad-og-opptak/opptakskrav-til-studier"
+          target="_blank">
+            opptakskrav.
+          </a>
         </p>
       </div>
     </div>
@@ -190,8 +215,18 @@
                 Studenten kjenner til grunnleggende konsepter innen
                 programmering, med fokus på prosedyre-orientert og
                 objekt-orientert programmering. Selv om studenten kan primært
-                programmere i Java, så forventes det at studenten kan overføre
-                sine kunnskaper til andre imperative programmeringsspråk.
+                programmere i 
+                <a class="java" 
+                href="https://www.w3schools.com/java/java_intro.asp"
+                target="_blank">
+                  Java,
+                </a> så forventes det at studenten kan overføre
+                sine kunnskaper til andre 
+                <a class="programmeringsspråk"
+                href="https://www.geeksforgeeks.org/introduction-of-programming-paradigms/"
+                target="_blank"> 
+                imperative programmeringsspråk.
+                </a>
               </li>
             </ul>
           </div>
