--- a/topical.html
+++ b/topical.html
@@ -155,8 +155,12 @@
       <div class="content">
         <p>
           Dette emnet skal gi studenten grunnleggende forståelse og ferdigheter
-          innen imperative programmeringsprinsipper og objekt-orientert
-          programmering.
+          innen imperative programmeringsprinsipper og 
+          <a class="programmeringsspråk" 
+          href="https://www.wikipendium.no/TDT4100_Objektorientert_Programmering/nb/"
+          target="_blank">
+            objektorientert programmering.
+          </a>
         </p>
       </div>
     </div>
