--- a/topical.html
+++ b/topical.html
@@ -156,6 +156,7 @@
         <p>
           Dette emnet skal gi studenten grunnleggende forståelse og ferdigheter
           innen imperative programmeringsprinsipper og 
+          <!-- link via tekst til informasjon om objektorientert programmering: https://www.wikipendium.no/TDT4100_Objektorientert_Programmering/nb/-->
           <a class="programmeringsspråk" 
           href="https://www.wikipendium.no/TDT4100_Objektorientert_Programmering/nb/"
           target="_blank">
@@ -177,6 +178,7 @@
       <div class="content">
         <p>
           Ingen ut over 
+          <!-- Link via tekst til OsloMet infoside om opptakskrav: https://www.oslomet.no/studier/soknad-og-opptak/opptakskrav-til-studier -->
           <a class="opptakskrav" 
           href="https://www.oslomet.no/studier/soknad-og-opptak/opptakskrav-til-studier"
           target="_blank">
@@ -220,12 +222,15 @@
                 programmering, med fokus på prosedyre-orientert og
                 objekt-orientert programmering. Selv om studenten kan primært
                 programmere i 
+                <!-- Link i tekst til side om Java: https://www.w3schools.com/java/java_intro.asp -->
                 <a class="java" 
                 href="https://www.w3schools.com/java/java_intro.asp"
                 target="_blank">
                   Java,
-                </a> så forventes det at studenten kan overføre
+                </a> 
+                så forventes det at studenten kan overføre
                 sine kunnskaper til andre 
+                <!-- Link i tekst til informasjon om programmering: https://www.geeksforgeeks.org/introduction-of-programming-paradigms/ -->
                 <a class="programmeringsspråk"
                 href="https://www.geeksforgeeks.org/introduction-of-programming-paradigms/"
                 target="_blank"> 
