--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
       </div>
     </div>
     <div class="about-oslomet-container">
-      <!-- An empty container made to style the grid -->
+      <!-- An empty container made to style the grid easier -->
       <div class="empty"></div>
       <!-- This contains more information about OsloMet -->
       <!-- Text taken from https://www.oslomet.no/studier/studenthistorier/dette-er-oslomet -->
