add photographer link

--- a/campus.html
+++ b/campus.html
@@ -86,6 +86,14 @@
                       <!--Informasjonen om campuset som skal komme når du klikker i nedtrekksmenyen-->
 
         <div class="content">
+          <div class="original-image-studiestart">
+            <a class="original-image"
+            href="https://www.oslomet.no/var/oslomet/storage/images/_aliases/xxlarge/8/1/8/1/1818-8-nor-NO/pilestredet.jpg"
+            target="_blank">
+            <!-- This is the photographer of the original image -->
+              Foto: Ukjent/Hentet fra OsloMet
+            </a>
+          </div>
           <p class="campus-info">
             En rekke av bygningene ligger i det tradisjonsrike Frydenlund-området ved Bislett. Der man tidligere 
             kunne kjenne duften av malt og humle fra et av de største ølbryggeriene i landet, finner du nå 
@@ -146,6 +154,14 @@
                     <!--Informasjonen om campuset som skal komme når du klikker i nedtrekksmenyen-->
 
          <div class="content">
+          <div class="original-image-studiestart">
+            <a class="original-image"
+            href="https://www.oslomet.no/var/oslomet/storage/images/_aliases/medium/4/5/8/2/42854-2-nor-NO/kjeller.jpg"
+            target="_blank">
+            <!-- This is the photographer of the original image -->
+              Foto: Ukjent/Hentet fra OsloMet
+            </a>
+          </div>
             <p class="campus-info">
               Studiested Kjeller befinner seg i landlige omgivelser ved Lillestrøm. Byggets arkitektur gjenspeiler en 
               moderne kunnskapsbedrift. Det er høyt under taket, og store vindusflater slipper lyset inn. 
